Partial reorganization, remove duplicated code, restore api descriptions, update tests.
